--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,14 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.6",
+    "dompurify": "^3.0.2",
+    "easymde": "^2.18.0",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
