--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.2.0",
     "typescript": "^4.9.5",
