--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "dompurify": "^3.0.2",
     "easymde": "^2.18.0",
     "highlight.js": "^11.7.0",
+    "history": "^5.3.0",
     "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,9 +50,12 @@
     ]
   },
   "devDependencies": {
-    "jest-watch-typeahead": "^0.6.5"
+    "jest-watch-typeahead": "^0.6.5",
+    "msw": "^0.39.2"
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
   }
 }
